--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+v2.0 (not yet released)
+	- Implement option to hide the Deskbar icon. Stopping the capture
+	  is done via a ctrl+command+shift+r key combo, intercepted
+	  by an input-server addon (puckipedia)
+	  
 v1.9.4
     - Save the output file format to settings.
     - Add automatic extension to the file name, based on the file format
