--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,11 @@ v2.1 (not yet released)
 	- Added option to capture a single window. Note that the application
 	  remembers the initial window position, it does not follow the window if
 	  it's moved or resized.
+	- An alert is shown if the user tries to quit the app and recording or encoding is in progress.
+	  This way the user can force quitting.
+	- Added an Information view, mostly for debugging reasons
+	- Fixed some crashes on quit when encoding is in progress
+
 v2.0 
 	- Implement option to hide the Deskbar icon. Stopping the capture
 	  is done via a ctrl+command+shift+r key combo, intercepted
