--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,13 +1,15 @@
 v2.1 (not yet released)
 	- Added option to capture a single window. Note that the application
-	  remembers the initial window position, it does not follow the window if
+	  remembers the initial window frame, it does not follow the window if
 	  it's moved or resized.
+	- it was possible to start recording from the Deskbar control when encoding was in progress.
+	  This would have caused various problems. Fixed.
 	- An alert is shown if the user tries to quit the app and recording or encoding is in progress.
-	  This way the user can force quitting.
+	  The user can force quitting if needed.
 	- Added a live indicator of the number of recorded frames
 	- Added an Information view, mostly for debugging reasons
+	- Fixed preview image ratio
 	- Fixed crashes on quit when encoding is in progress
-	- Fixed starting recording from the Deskbar control when encoding is in progress
 	- Code cleanup
 
 v2.0 
