--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 v2.2
 	- Got rid of BItmapMovie class, thus simplifying the code.
+	- Added new vector icons made by Pete Goodeve (based on the
+	 original Zumi's icon) and Zumi
 
 v2.1
 	- Added option to capture a single window. Note that the application
