--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,16 +1,11 @@
 v2.2
 	- Got rid of BItmapMovie class, thus simplifying the code.
-	- Added new vector icons made by Pete Goodeve (based on the
-	 original Zumi's icon) and Zumi
-
+	- Added new vector icons made by Pete Goodeve (based on the original Zumi's icon) and Zumi
+---
 v2.1
-	- Added option to capture a single window. Note that the application
-	  remembers the initial window frame, it does not follow the window if
-	  it's moved or resized.
-	- It was possible to start recording from the Deskbar control when encoding was in progress.
-	  This would have caused various problems. Fixed.
-	- An alert is shown if the user tries to quit the app and recording or encoding is in progress.
-	  The user can force quitting if needed.
+	- Added option to capture a single window. Note that the application remembers the initial window frame, it does not follow the window if it's moved or resized.
+	- It was possible to start recording from the Deskbar control when encoding was in progress. This would have caused various problems. Fixed.
+	- An alert is shown if the user tries to quit the app and recording or encoding is in progress. The user can force quitting if needed.
 	- Added a live indicator of the number of recorded frames
 	- Added an Information view, mostly for debugging reasons
 	- Improved code which handles the case the destination file already exists
@@ -18,31 +13,27 @@ v2.1
 	- Fixed crash on quit when recording is in progress
 	- Fixed crash on quit when encoding is in progress
 	- Code cleanup
-
+---
 v2.0 
-	- Implement option to hide the Deskbar icon. Stopping the capture
-	  is done via a ctrl+command+shift+r key combo, intercepted
-	  by an input-server addon (puckipedia)
+	- Implement option to hide the Deskbar icon. Stopping the capture is done via a ctrl+command+shift+r key combo, intercepted by an input-server addon (puckipedia)
 	- Fix preview not being updated in various circumstances
 	- Moved resizing slider to the main tab view
 	- Enlarged the preview area, and hopefully improved layout
-	  
+---	  
 v1.9.4
 	- Save the output file format to settings.
     	- Add automatic extension to the file name, based on the file format
     	- Fix bug where choosing some file format wouldn't work
 	- Filter out non-writable file formats (Jessica Hamilton)
 	- Code cleanup
-
+---
 v1.9.3
 	- First version hosted on github
 	- Add a filepanel to choose the output file name
 	- Fix Preview
 	- Improve DeskBar control
-	- Fix state detection mismatches when starting, then pausing, then stopping,
-          then starting again.
+	- Fix state detection mismatches when starting, then pausing, then stopping, then starting again.
     	- Fix clip size handling
-    	- Fix location of the temporary file due to changes
-      	  in Haiku filesystem hierarchy (noryb009)
+    	- Fix location of the temporary file due to changes in Haiku filesystem hierarchy (noryb009)
     	- Improve GUI (John Scipione, me)
-	
+---
