--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
 v2.2.2 (not yet released)
-	- If saving a frame fails, the application will now abort and report an error. 
+	- If saving a frame fails, the application will now abort and report an error.
+	- In selection mode, add an hint to the user via a text message on the screen 
 	 
 v2.2.1
 	- Fix a last-minute-commit-introduced problem: if a non-zero window border was specified, windows weren't tracked correctly in single-window capture mode.
