--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,9 +1,10 @@
-v2.2.2 (not yet released)
-	- If saving a frame fails, the application will now abort and report an error.
+v2.3 (not yet released)
 	- In selection mode, add an hint to the user via text instructions on the screen.
 	- The selection can be moved after being selected
-	- Moved encoding settings to the options tab
 	- Added capture frame settings
+	- If saving a frame fails, the application will now abort and report an error.
+	- Layout change: Moved most settings to the options tab
+	- Adapted code to be able to use the Shortcuts preflet to control recording
 ---	 
 v2.2.1
 	- Fix a last-minute-commit-introduced problem: if a non-zero window border was specified, windows weren't tracked correctly in single-window capture mode.
