--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,7 @@
-v2.3 (not yet released)
+v2.3.2
+	- Fix crash on recording if entering region selection mode, then hitting ESC
+---
+v2.3.1
 	- In selection mode, add an hint to the user via text instructions on the screen.
 	- The selection can be moved after being selected
 	- Added capture frame settings
