--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 v2.3.2
 	- Added a field to select the target frame rate
 	- Fix crash on recording if entering region selection mode, then hitting ESC
+	- Fix displaying pause bitmap on recording in certain cases
 ---
 v2.3.1
 	- In selection mode, add an hint to the user via text instructions on the screen.
