--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,19 +1,19 @@
 v2.3.3
-	- Fix unstoppable capture thread on full-disk conditions
+	- Fix unstoppable capture thread on full-disk conditions.
 ---
 v2.3.2
-	- Added a field to select the target frame rate
-	- Fix crash on recording if entering region selection mode, then hitting ESC
-	- Fix displaying pause bitmap on recording in certain cases
+	- Added a field to select the target frame rate.
+	- Fix crash on recording if entering region selection mode, then hitting ESC.
+	- Fix displaying pause bitmap on recording in certain cases.
 ---
 v2.3.1
 	- In selection mode, add an hint to the user via text instructions on the screen.
-	- The selection can be moved after being selected
-	- Added capture frame settings
-	- Added clip duration while recording
+	- The selection can be moved after being selected.
+	- Added capture frame settings.
+	- Added clip duration while recording.
 	- If saving a frame fails, the application will now abort and report an error.
-	- Layout change: Moved most settings to the options tab
-	- Adapted code to be able to use the Shortcuts preflet to control recording
+	- Layout change: Moved most settings to the options tab.
+	- Adapted code to be able to use the Shortcuts preflet to control recording.
 ---	 
 v2.2.1
 	- Fix a last-minute-commit-introduced problem: if a non-zero window border was specified, windows weren't tracked correctly in single-window capture mode.
@@ -21,45 +21,45 @@ v2.2.1
 ---
 v2.2
 	- Finally fix clips frame rate. This was a long standing problem.
-	- Implement capturing a moving window. Won't work in case the window is resized
-	- Added a menu bar with "About" and "Quit" menu items
-	- Added new vector icons made by Pete Goodeve (based on the original Zumi's icon) and Zumi
-	- Store first few screenshots in memory, then start saving them to disk when memory is not enough
-	- Added about window
+	- Implement capturing a moving window. Won't work in case the window is resized.
+	- Added a menu bar with "About" and "Quit" menu items.
+	- Added new vector icons made by Pete Goodeve (based on the original Zumi's icon) and Zumi.
+	- Store first few screenshots in memory, then start saving them to disk when memory is not enough.
+	- Added about window.
 	- Got rid of BitmapMovie class, thus simplifying the code.
 ---
 v2.1
 	- Added option to capture a single window. Note that the application remembers the initial window frame, it does not follow the window if it's moved or resized.
 	- It was possible to start recording from the Deskbar control when encoding was in progress. This would have caused various problems. Fixed.
 	- An alert is shown if the user tries to quit the app and recording or encoding is in progress. The user can force quitting if needed.
-	- Added a live indicator of the number of recorded frames
-	- Added an Information view, mostly for debugging reasons
-	- Improved code which handles the case the destination file already exists
-	- Fixed preview image ratio
-	- Fixed crash on quit when recording is in progress
-	- Fixed crash on quit when encoding is in progress
-	- Code cleanup
+	- Added a live indicator of the number of recorded frames.
+	- Added an Information view, mostly for debugging reasons.
+	- Improved code which handles the case the destination file already exists.
+	- Fixed preview image ratio.
+	- Fixed crash on quit when recording is in progress.
+	- Fixed crash on quit when encoding is in progress.
+	- Code cleanup.
 ---
 v2.0 
-	- Implement option to hide the Deskbar icon. Stopping the capture is done via a ctrl+command+shift+r key combo, intercepted by an input-server addon (puckipedia)
-	- Fix preview not being updated in various circumstances
-	- Moved resizing slider to the main tab view
-	- Enlarged the preview area, and hopefully improved layout
----	  
+	- Implement option to hide the Deskbar icon. Stopping the capture is done via a ctrl+command+shift+r key combo, intercepted by an input-server addon (puckipedia).
+	- Fix preview not being updated in various circumstances.
+	- Moved resizing slider to the main tab view.
+	- Enlarged the preview area, and hopefully improved layout.
+---
 v1.9.4
 	- Save the output file format to settings.
-    	- Add automatic extension to the file name, based on the file format
-    	- Fix bug where choosing some file format wouldn't work
-	- Filter out non-writable file formats (Jessica Hamilton)
-	- Code cleanup
+	- Add automatic extension to the file name, based on the file format.
+	- Fix bug where choosing some file format wouldn't work.
+	- Filter out non-writable file formats (Jessica Hamilton).
+	- Code cleanup.
 ---
 v1.9.3
-	- First version hosted on github
-	- Add a filepanel to choose the output file name
-	- Fix Preview
-	- Improve DeskBar control
+	- First version hosted on github.
+	- Add a filepanel to choose the output file name.
+	- Fix Preview.
+	- Improve DeskBar control.
 	- Fix state detection mismatches when starting, then pausing, then stopping, then starting again.
-    	- Fix clip size handling
-    	- Fix location of the temporary file due to changes in Haiku filesystem hierarchy (noryb009)
-    	- Improve GUI (John Scipione, me)
+	- Fix clip size handling.
+	- Fix location of the temporary file due to changes in Haiku filesystem hierarchy (noryb009).
+	- Improve GUI (John Scipione, me).
 ---
