--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v2.4.0
+	- Add an option to save the frames to a folder instead of encoding
+---
 v2.3.3
 	- Let the user choose to open the clip when encoding is completed.
 	- Disable controls when recording to avoid possible problems.
