--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 v2.4.0
-	- Add an option to save the frames to a folder instead of encoding.
+	- Add an option to save the frames to a folder instead of creating a clip.
 	- Add a pause button to the main window.
+	- Fix memory leak.
 	- Fix recording time string with non default locales.
 	- In case of crash (should not happen!!!) the deskbar replicant is removed automatically.
 	- Disable more controls when they cannot be used.
