--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v2.5
+	- Add an option to export to animated GIF.
+---
 v2.4.0
 	- Add an option to save the frames to a folder instead of encoding.
 	- Add a pause button to the main window.
