--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,12 @@
+v2.6.0
+	- Greatly improve encoding speed if scaling is disabled.
+	- Fixed scaling / exporting / post encoding phases not showing progress.
+	- Fixed hang-on-quit when in pre-encoding phase.
+	- Fixed distorted images when exporting to BMP / GIF.
+---
+v2.5.3
+	- Fixed crash / hang after recording many frames with virtual memory enabled.
+---
 v2.5.2
 	- Fixed GIF/BMP export only exporting half the frames (for real this time).
 	- Fixed Slider not respecting its limits in certain cases.
