ChangeLog: fix tabs / spacing

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,8 @@
 v2.6.1
-        - Added new icon from Zumi. Thanks!
-        - Fixed displaying number of recorded frames.
+	- Added new icon from Zumi. Thanks!
+	- Fixed displaying number of recorded frames.
+	- Moved settings file to a subfolder.
+	- Blacklist AVI and Matroska since they don't work well in current Haiku versions.
 ---
 v2.6.0
 	- Greatly improve encoding speed if scaling is disabled.
