--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ v2.6.1
 	- Fixed displaying number of recorded frames.
 	- Moved settings file to a subfolder.
 	- Blacklist AVI and Matroska since they don't work well in current Haiku versions.
+	- Fix Deskbar icon not scaling.
 ---
 v2.6.0
 	- Greatly improve encoding speed if scaling is disabled.
