--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+v2.7.0
+	- Added support for scripting via hey.
+	- Improved deskbar menu look with icons from zuMi.
+	- Reworked handling of existing output clip file.
+---
 v2.6.1
 	- Added new icon from Zumi. Thanks!
 	- Fixed displaying number of recorded frames.
