Updated changelog and readme

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 v2.7.0
 	- Added support for scripting via hey.
+	- Greatly improved GIF export quality and reduced size of the resulting file:
+		for a 200 frames FullHD GIF: 300KB vs 95MB
 	- Reworked handling of existing output file.
 	- Added option to quit after encoding.
 ---
