--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+v2.8.1
+	- Improved menus
+	- Fixed hang on quit if exiting during pause
+	- Fixed build on 32 bit
+---
 v2.8.0
 	- Added ability to select capture area on start when launched via shortcut.
 	- Added options to enable/disable the launch shortcut
