--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v2.9.1
+	- Fixed big memory leak.
+---
 v2.9.0
 	- Added localization support (courthesy of Humdinger).
 	- Added various translations.
@@ -17,7 +20,7 @@ v2.7.0
 	- Fixed crashing on haiku 32 bit after recording few frames.
 	- Fixed 'Reset Settings' not resetting media format
 	- Added support for scripting via hey.
-	- Greatly improved GIF export quality and reduced size of the resulting file: 
+	- Greatly improved GIF export quality and reduced size of the resulting file:
 		for a 200 frames FullHD GIF: 300KB vs 95MB.
 	- Added display of average FPS while recording.
 	- Reworked handling of existing output file.
@@ -90,7 +93,7 @@ v2.3.1
 	- If saving a frame fails, the application will now abort and report an error.
 	- Layout change: Moved most settings to the options tab.
 	- Adapted code to be able to use the Shortcuts preflet to control recording.
----	 
+---
 v2.2.1
 	- Fix a last-minute-commit-introduced problem: if a non-zero window border was specified, windows weren't tracked correctly in single-window capture mode.
 	- If the user selected the desktop window, the application would just hang in the encoding phase.
@@ -116,7 +119,7 @@ v2.1
 	- Fixed crash on quit when encoding is in progress.
 	- Code cleanup.
 ---
-v2.0 
+v2.0
 	- Implement option to hide the Deskbar icon. Stopping the capture is done via a ctrl+command+shift+r key combo, intercepted by an input-server addon (puckipedia).
 	- Fix preview not being updated in various circumstances.
 	- Moved resizing slider to the main tab view.
